correction tablette

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ form {
 .site2 {
     display: flex;
     flex-direction: column;
-    margin-top: 1.5em;
+    margin-top: 0;
 }
 
 .site2 div {
@@ -473,11 +473,13 @@ header {
     margin-right: 1em;
 }
 
-.ancres{
+.ancres {
     margin: 1em;
     justify-content: space-around;
     order: 3;
     flex-basis: 100%;
+    border-bottom: #0065FC solid 2px;
+    border-top: none;
 }
 
 .ancres li{
@@ -485,12 +487,9 @@ header {
     text-decoration: none;
 }
 
-.ancres a :hover {
+.ancres a:hover {
     border-top: none;
 }
-.ancres a :hover{
-    border-bottom: solid 2px #0065FC;
- }
 
 .description-de-la-page {
 
@@ -641,7 +640,6 @@ form {
     
 }
 
-
 .site3 .frioul, .site3 .parc {
     margin-top: 0;
 }
@@ -711,22 +709,22 @@ footer .hebergements {
     background-color: #F2F2F2;
 }
 
-
-
-@media screen and (min-width:769px) and (max-width: 1023px){
+/
+@media screen and (min-width:768px) and (max-width: 1023px){
 
 body{
     overflow-x: hidden;
     margin: 1.5em;
 }
 
- .ancres {
+.ancres {
         display: flex;
         padding: 0;
         margin-left: 50%;
         width: 100%;
-        
-    }       
+        border-bottom: none;    
+    } 
+
 .ancres li {
         list-style: none;
         padding-right: 80%;     
@@ -775,12 +773,12 @@ body{
     justify-content: space-evenly;
 
 }
+
 .site1 img {
     width: 100%;
     height: 150px;
     object-fit: cover;
     border-radius: O.7em 0.7em 0 0;
-
 }
 
 .site2 img {
@@ -798,13 +796,15 @@ body{
 .filtres { 
     flex-wrap: wrap;
 }
+
 .filtres li {
     margin-top: 0.7em;
-
 }
+
 .site1 {
     justify-content: space-between;
 }
+
 .site3 {
     flex-wrap: wrap;
     justify-content: space-between;
@@ -822,15 +822,16 @@ body{
     margin-bottom: 3em;
 
 }
+
 .site3 .notre-dame {
     margin-bottom: 2em;
 }
-
 
 .site3 div {
     width: 100%;
     margin: 0;
 }
+
 .site3 div {
     width: 100%;
 }
